--- a/report_template.html
+++ b/report_template.html
@@ -407,7 +407,7 @@
 </head>
 <body>
     <header>
-        <img src="{{ url_for('static', filename='logo.png') }}" alt="Tech Mahindra Logo">
+        <img src="static/logo.png" alt="Tech Mahindra Logo">
         <div class="header-titles">
             <h1 class="green">Green</h1>
             <h1 class="coderefiner">Code Emissions Report</h1>
