--- a/report_template.html
+++ b/report_template.html
@@ -213,6 +213,10 @@
             max-width: 100%;
             height: auto !important;
             margin-bottom: 2rem;
+            background: var(--card-bg);
+            border-radius: 16px;
+            padding: 2rem;
+            box-shadow: var(--shadow);
         }
 
         .table-wrapper {
