--- a/report_template.html
+++ b/report_template.html
@@ -213,6 +213,26 @@
             max-width: 100%;
             height: auto !important;
             margin-bottom: 2rem;
+            position: relative;
+            background: var(--card-bg);
+            border-radius: 16px;
+            padding: 1.5rem;
+            box-shadow: var(--shadow);
+            transition: var(--transition);
+        }
+        .graph-container:hover, .chart-wrapper:hover {
+            transform: translateY(-5px);
+        }
+        .graph-container::before, .chart-wrapper::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 4px;
+            background: linear-gradient(90deg, var(--primary), var(--secondary));
+            border-top-left-radius: 16px;
+            border-top-right-radius: 16px;
         }
 
         .table-wrapper {
@@ -308,11 +328,15 @@
         }
         .chart-wrapper {
             background: var(--card-bg);
-            border-radius: 1rem;
             padding: 1.5rem;
             box-shadow: var(--shadow);
             margin-bottom: 2rem;
             animation: slideUp 0.5s ease-out;
+            border-radius: 16px;
+            padding: 1.5rem;
+            box-shadow: var(--shadow);
+            margin-bottom: 2rem;
+            transition: var(--transition);
         }
         .chart-wrapper h3 {
             color: var(--text);
@@ -375,8 +399,6 @@
             width: 100% !important;
             max-width: 100% !important;
         }
-
-
         .section-column {
             flex: 1;
             min-width: 300px;
@@ -384,7 +406,6 @@
             display: flex;
             flex-direction: column;
         }
-
         .full-width-section {
             width: 100%;
         }
@@ -394,10 +415,15 @@
             box-sizing: border-box;
             overflow: hidden;
         }
-
         .graph-container {
             width: 100%;
             overflow: hidden;
+        }
+        .section-column .section {
+            background: var(--background);
+            border-radius: 16px;
+            padding: 1.5rem;
+            margin-bottom: 2rem;
         }
 
         @media (max-width: 768px) {
