--- a/report_template.html
+++ b/report_template.html
@@ -208,33 +208,12 @@
             color: var(--danger);
         }
         .graph-container {
-            width: 100%;
-            overflow: hidden;
-            max-width: 100%;
-            height: auto !important;
-            margin-bottom: 2rem;
-            position: relative;
             background: var(--card-bg);
             border-radius: 16px;
-            padding: 1.5rem;
+            padding: 2rem;
             box-shadow: var(--shadow);
-            transition: var(--transition);
+            margin-bottom: 2rem;
         }
-        .graph-container:hover, .chart-wrapper:hover {
-            transform: translateY(-5px);
-        }
-        .graph-container::before, .chart-wrapper::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 4px;
-            background: linear-gradient(90deg, var(--primary), var(--secondary));
-            border-top-left-radius: 16px;
-            border-top-right-radius: 16px;
-        }
-
         .table-wrapper {
             background: var(--card-bg);
             border-radius: 16px;
@@ -328,15 +307,11 @@
         }
         .chart-wrapper {
             background: var(--card-bg);
+            border-radius: 1rem;
             padding: 1.5rem;
             box-shadow: var(--shadow);
             margin-bottom: 2rem;
             animation: slideUp 0.5s ease-out;
-            border-radius: 16px;
-            padding: 1.5rem;
-            box-shadow: var(--shadow);
-            margin-bottom: 2rem;
-            transition: var(--transition);
         }
         .chart-wrapper h3 {
             color: var(--text);
@@ -419,18 +394,7 @@
             width: 100%;
             overflow: hidden;
         }
-        .section-column .section {
-            background: var(--background);
-            border-radius: 16px;
-            padding: 1.5rem;
-            margin-bottom: 2rem;
-        }
-
         @media (max-width: 768px) {
-            .main-content {
-                flex-direction: column;
-            }
-
             .section-column {
                 max-width: 100%;
             }
