--- a/report_template.html
+++ b/report_template.html
@@ -213,6 +213,10 @@
             max-width: 100%;
             height: auto !important;
             margin-bottom: 2rem;
+            background: var(--card-bg);
+            border-radius: 16px;
+            box-shadow: var(--shadow);
+            padding: 1.5rem;
         }
         .table-wrapper {
             background: var(--card-bg);
@@ -221,6 +225,7 @@
             box-shadow: var(--shadow);
             overflow-x: auto;
             border-color: #000000;
+            margin-top: 2rem;
         }
 
         .data-table {
@@ -310,7 +315,6 @@
             border-radius: 1rem;
             padding: 1.5rem;
             box-shadow: var(--shadow);
-            margin-bottom: 2rem;
             animation: slideUp 0.5s ease-out;
         }
         .chart-wrapper h3 {
@@ -394,13 +398,17 @@
             width: 100%;
             overflow: hidden;
         }
-        @media (max-width: 768px) {            
-            .main-content {
-                flex-direction: column;
-            }
+        @media (max-width: 768px) {
             .section-column {
                 max-width: 100%;
             }
+        }
+        .code-analysis-graph {
+            background: var(--card-bg);
+            border-radius: 16px;
+            box-shadow: var(--shadow);
+            padding: 1.5rem;
+            margin-bottom: 2rem;
         }
     </style>
 </head>
