--- a/report_template.html
+++ b/report_template.html
@@ -226,6 +226,7 @@
             overflow-x: auto;
             border-color: #000000;
             margin-top: 2rem;
+            margin-bottom: 2rem;
         }
 
         .data-table {
@@ -316,6 +317,8 @@
             padding: 1.5rem;
             box-shadow: var(--shadow);
             animation: slideUp 0.5s ease-out;
+            margin-top: 1rem;
+            margin-bottom: 2rem;
         }
         .chart-wrapper h3 {
             color: var(--text);
@@ -395,7 +398,7 @@
             overflow: hidden;
         }
         .graph-container {
-            width: 100%;
+            width: 92%;
             overflow: hidden;
         }
         @media (max-width: 768px) {
