--- a/report_template.html
+++ b/report_template.html
@@ -52,6 +52,7 @@
             text-align: left;
             animation: fadeUp 0.5s forwards;
             transform: translateY(20px);
+            margin-top: 2rem;
         }
         .navigation a {
             text-decoration: none;
