--- a/details_server_template.html
+++ b/details_server_template.html
@@ -610,7 +610,7 @@
         </div>
     </div>
     <script type="text/template" id="serverDetails">
-        {{ server_detailes || tojson }}
+        {{ server_detailes | tojson }}
     </script>
     
     <script>
